cabal-version:       2.2
name:                examples
version:             0.2.0.0
synopsis:            examples for the new version of hasktorch
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Hasktorch Contributor Team
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Machine Learning
build-type:          Simple

common config
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0 -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                    --  , ghc-typelits-extra >= 0.3.1
                    --  , ghc-typelits-knownnat >= 0.7
                    --  , ghc-typelits-natnormalise >= 0.7
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , mtl
 default-extensions:  Strict
                    , StrictData

executable xor-mlp
  import:              config
  hs-source-dirs:      xor-mlp
  main-is:             Main.hs

executable static-xor-mlp
  import:              config
  hs-source-dirs:      static-xor-mlp
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , pipes
                     , mtl
                     , reflection

library static-mnist
  import:              config
  hs-source-dirs:      static-mnist
  ghc-options:         -fno-warn-partial-type-signatures
  exposed-modules:     Common
  build-depends:       bytestring >= 0.10.8
                     , libtorch-ffi
                     , random >= 1.1
                     , pipes
                     , pipes-concurrency
                     , mtl

executable static-mnist-cnn
  import:              config
  hs-source-dirs:      static-mnist-cnn
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist

executable static-mnist-mlp
  import:              config
  hs-source-dirs:      static-mnist-mlp
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist

executable typed-transformer
  import:              config
  hs-source-dirs:      typed-transformer
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       async
                     , constraints
                     , containers
                     , foldl
                     , lens-family-core
                     , libtorch-ffi
                     , ordered-containers
                     , pipes
                     , pipes-group
                     , pipes-random
                     , pipes-safe
                     , pipes-text
                     , safe-exceptions
                     , text
                     , monad-control
                     , transformers-base >= 0.4

executable rnn
  import:              config
  hs-source-dirs:      rnn
  main-is:             Main.hs
  other-modules:       RecurrentLayer,
                       Elman,
                       LSTM,
                       GRU
  build-depends:       libtorch-ffi

executable minimal-text-example
  import:              config
  hs-source-dirs:      minimal-text-example,
                       rnn
  main-is:             Hello.hs
  other-modules:       RecurrentLayer,
                       Elman,
                       LSTM,
                       GRU
  build-depends:       libtorch-ffi

executable regression
  import:              config
  hs-source-dirs:      regression
  main-is:             Main.hs
  build-depends:       libtorch-ffi

executable gaussian-process
  import:              config
  hs-source-dirs:      gaussian-process
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures

executable vae
  import:              config
  hs-source-dirs:      vae
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures

executable serialization
  import:              config
  hs-source-dirs:      serialization
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       bytestring
                     , serialise

executable optimizers
  hs-source-dirs:      optimizers
  main-is:             Main.hs
  other-modules:       TestFunctions
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , mtl >= 2.2.2

executable optimizers-cpp
  hs-source-dirs:      optimizers-cpp
  main-is:             Main.hs
  other-modules:       TestFunctions
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , mtl >= 2.2.2
                     , data-default-class

executable optimizers-cpp-typed
  hs-source-dirs:      optimizers-cpp-typed
  main-is:             Main.hs
  other-modules:       TestFunctions
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , mtl >= 2.2.2
                     , data-default-class

executable image-processing
  hs-source-dirs:      image-processing
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch

executable mnist-mlp
  import:              config
  hs-source-dirs:      mnist-mlp
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist
                     , pipes

executable mnist-mixed-precision
  import:              config
  hs-source-dirs:      mnist-mixed-precision
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist
                     , pipes

executable load-torchscript
  import:              config
  hs-source-dirs:      load-torchscript
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       inline-c-cpp
                     , safe-exceptions
                     , unix
                     , JuicyPixels

executable matrix-factorization
  import:              config
  hs-source-dirs:      matrix-factorization
  main-is:             SparseRatingMatrix.hs
  other-modules:       MF
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , libtorch-ffi

executable gd-field
  import:              config
  hs-source-dirs:      gd-field
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , text
                     , hvega
                     , hasktorch
                     , libtorch-ffi

executable autograd
 import:               config
 hs-source-dirs:       autograd
 main-is:              Main.hs
 ghc-options:          -fno-warn-partial-type-signatures
 build-depends:        base >= 4.7 && <5
                     , hasktorch
                     , libtorch-ffi

executable alexNet
 import:               config
 hs-source-dirs:       alexNet
 main-is:              Main.hs
 other-modules:        AlexNet
 ghc-options:          -fno-warn-partial-type-signatures
 build-depends:        base >= 4.7 && <5
                     , hasktorch
                     , libtorch-ffi
                     , directory
                     , containers
                     , regex-tdfa >= 1.3.1
                     , random

executable distill
  import:              config
  hs-source-dirs:      distill
  main-is:             Main.hs
  other-modules:       Distill, Dataset, Model
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , hvega
                     , mtl
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist

executable regularization
  import:              config
  hs-source-dirs:      distill
  main-is:             Regularization.hs
  other-modules:       Distill, Dataset, Model, Plot
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , hvega
                     , mtl 
                     , process
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist
                     , text

executable iris-classification
  import:              config
  hs-source-dirs:      iris-classification
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , mtl
                     , random >= 1.1
                     , safe-exceptions
                     , cassava
                     , pipes
                     , pipes-safe
                     , pipes-concurrency
                     , vector
