name:                hasktorch-examples
version:             0.1.0.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         examples
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

