name:                hasktorch-examples
version:             0.1.0.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         examples
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable download-mnist
  default-language:    Haskell2010
  main-is:             DownloadMNIST.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , bytestring
                     , cryptonite
                     , directory
                     , filepath
                     , network-uri

