name:                hasktorch-examples
version:             0.0.1.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         Example usage
homepage:            https://github.com/austinvhuang/hasktorch#readme
bug-reports:         https://github.com/austinvhuang/hasktorch/issues
license:             BSD3
author:              Austin Huang
category:            Tensors, Machine Learning
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/austinvhuang/hasktorch

executable lasso
  main-is: Lasso.hs
  hs-source-dirs: lasso
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
    , microlens
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable ad
  main-is: AD.hs
  hs-source-dirs:
      ad
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable bayesian-regression
  default-language: Haskell2010
  main-is: BayesianRegression.hs
  hs-source-dirs:
      bayesian-regression
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples

executable download-mnist
  main-is: DownloadMNIST.hs
  hs-source-dirs:
      download-mnist
  ghc-options: -Wall -fno-cse
  build-depends:
      HTTP
    , base >=4.7 && <5
    , bytestring
    , cryptonite
    , directory
    , filepath
    , hasktorch-core
    , network-uri
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable ff-typed
  main-is: FeedForwardTyped.hs
  hs-source-dirs:
      ff-typed
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable ff-untyped
  main-is: FeedForwardUntyped.hs
  hs-source-dirs:
      ff-untyped
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable gradient-descent
  main-is: GradientDescent.hs
  hs-source-dirs:
      gradient-descent
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
    , microlens >=0.4.8.1
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable multivariate-normal
  main-is: MultivariateNormal.hs
  hs-source-dirs:
      multivariate-normal
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable static-tensor-usage
  main-is: Main.hs
  hs-source-dirs:
      static-tensor-usage
  ghc-options: -Wall -fno-cse
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
  other-modules:
      Paths_hasktorch_examples
  default-language: Haskell2010

executable nlp
  main-is: Main.hs
  hs-source-dirs: nlp
  default-language: Haskell2010
  default-extensions: DataKinds, ScopedTypeVariables, OverloadedStrings
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures
  build-depends:
      base >=4.7 && <5
    , hasktorch-core
    , backprop >= 0.2

executable convolutions
  main-is: Main.hs
  hs-source-dirs: convolutions
  default-language: Haskell2010
  default-extensions: DataKinds, ScopedTypeVariables, OverloadedStrings
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures
  other-modules:
      Utils
    , Conv1d
    , Conv2d
    , DataLoader
    , LeNet
    , MaxPooling
    , ReLU
  build-depends:
      base >=4.7 && <5
    , backprop >= 0.2
    , directory
    , filepath
    , ghc-typelits-natnormalise
    , hasktorch-core
    , list-t
    , microlens-th
    , mtl
    , transformers
    , JuicyPixels


