cabal-version:       2.2
name:                experimental
version:             0.2.0.0
synopsis:            examples for the new version of hasktorch
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Machine Learning
build-type:          Simple

common config
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                    --  , ghc-typelits-extra >= 0.3.1
                    --  , ghc-typelits-knownnat >= 0.7
                    --  , ghc-typelits-natnormalise >= 0.7
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , mtl

executable untyped-nlp
  import:              config
  hs-source-dirs:      untyped-nlp
  main-is:             Main.hs
