name:                ffi
version:             0.1.0.0
synopsis:            test out alternative options for ffi interface to libtorch 1.0
-- description:
homepage:            https://github.com/githubuser/ffi-experimental#readme
license:             BSD3
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple
cabal-version:       >=1.10

library
 exposed-modules:     ATen.Type
                    , ATen.Const
                    , ATen.Cast
                    , ATen.Class
                    , ATen.Unmanaged.NN
                    , ATen.Unmanaged.TH
                    , ATen.Unmanaged.Native
                    , ATen.Unmanaged.Type.Tuple
                    , ATen.Unmanaged.Type.Generator
                    , ATen.Unmanaged.Type.IntArray
                    , ATen.Unmanaged.Type.Scalar
                    , ATen.Unmanaged.Type.SparseTensorRef
                    , ATen.Unmanaged.Type.Storage
                    , ATen.Unmanaged.Type.Tensor
                    , ATen.Unmanaged.Type.TensorList
                    , ATen.Unmanaged.Type.TensorOptions
                    , ATen.Unmanaged.Type.StdString
                    , ATen.Unmanaged.Type.StdArray
                    , ATen.Unmanaged.Type.Context
                    , ATen.Unmanaged.Type.Extra
                    , ATen.Managed.NN
                    , ATen.Managed.TH
                    , ATen.Managed.Native
                    , ATen.Managed.Type.Tuple
                    , ATen.Managed.Type.Generator
                    , ATen.Managed.Type.IntArray
                    , ATen.Managed.Type.Scalar
                    , ATen.Managed.Type.SparseTensorRef
                    , ATen.Managed.Type.Storage
                    , ATen.Managed.Type.Tensor
                    , ATen.Managed.Type.TensorList
                    , ATen.Managed.Type.TensorOptions
                    , ATen.Managed.Type.StdString
                    , ATen.Managed.Type.StdArray
                    , ATen.Managed.Type.Context
                    , ATen.Managed.Type.Extra
                    , Torch.Unmanaged.NN
                    , Torch.Unmanaged.TH
                    , Torch.Unmanaged.Native
                    , Torch.Managed.NN
                    , Torch.Managed.TH
                    , Torch.Managed.Native
 hs-source-dirs: src
 default-language: Haskell2010
 build-depends:       base >= 4.7 && < 5
                    , inline-c-cpp >= 0.3.0.1
                    , inline-c
                    , optparse-applicative >= 0.14.3.0
                    , containers
                    , template-haskell
                    , bytestring
 extra-libraries:     stdc++
                    , c10
                    , iomp5
                    , mklml
                    , caffe2
                    , torch
 if os(darwin)
  ld-options: -Wl,-keep_dwarf_unwind
  ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11 -optc-xc++
 else
  ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11
 cc-options:        -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
 cxx-options:       -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
 extensions:          Strict
                    , StrictData


executable ffi-test
  hs-source-dirs:      example
  main-is:             CppTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c-cpp >= 0.3.0.1
                     , inline-c
                     , optparse-applicative >= 0.14.3.0
                     , containers
                     , safe-exceptions
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
    ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11 -optc-xc++
  else
    ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11
  cc-options:        -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
  cxx-options:       -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
  extra-libraries:     stdc++
                     , c10
                     , iomp5
                     , mklml
                     , caffe2
                     , torch
  extensions:          Strict
                     , StrictData

test-suite spec
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:   BasicSpec
                 , MemorySpec
                 , BackwardSpec
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c-cpp >= 0.3.0.1
                     , inline-c
                     , optparse-applicative >= 0.14.3.0
                     , containers
                     , ffi
                     , hspec
                     , hspec-discover
                     , safe-exceptions
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
    ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11 -optc-xc++
  else
    ghc-options:       -optc-D_GLIBCXX_USE_CXX11_ABI=0 -optc-std=c++11
  cc-options:        -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
  cxx-options:       -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
--  extra-libraries:    torch
  extensions:          Strict
                     , StrictData
