cabal-version:       2.2
name:                ghc-not-export
version:             0.1.0.0
synopsis:            GHC Plugin not to export inline-c-ffi's functions
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2021 Austin Huang
category:            GHC


library
  exposed-modules:     GHC.NotExport.Plugin
  build-depends:       base >=4.11 && <5
  build-depends:       ghc >=8.5
  default-language:    Haskell2010

test-suite demo
  type:       exitcode-stdio-1.0
  main-is:    Demo.hs
  hs-source-dirs: examples/
  build-depends:  base
  build-depends:  ghc-not-export
  default-language:    Haskell2010
